@@ -1,3 +1,8 @@
+2006-10-07  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/gimpfu.py: Don't use Python 2.4 specific functions,
+	nor deprecated sys module attributes. Fixes bug #360411.
+
 2006-10-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpaligntool.c (gimp_align_tool_initialize): added
